--- a/requirements.txt
+++ b/requirements.txt
@@ -119,6 +119,5 @@ pyproj==3.5.0
 pyrsistent==0.18.1
 pytest==7.2.2
 python-dateutil==2.8.2
-sklearn==1.1.3
-statsmodels==0.13.5
+scikit-learn==1.1.3
 streamlit==1.22.0
